--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,3 +1,11 @@
+/* 
+* #414868
+* #72789b
+* #e9efff
+* #d2a517
+* #ffeeca
+*/
+
 * {
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: Fira Sans, FontAwesome;
